# app/Http/Controllers/AuthenticatedSessionController.php
@@ -63,4 +63,23 @@ class AuthenticatedSessionController extends Controller
             'message' => 'Logged out',
         ], 200);
     }
+
+
+    #[OA\Patch(path: '/session/update', summary: 'Update the current session.', tags: ['Authentication'])]
+    #[OA\HeaderParameter(name: 'Authorization', description: 'Bearer token.', in: 'header', required: true, example: 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJlbWFpbCI6InVzZXJAYXBwLmNvbSIsImV4cCI6MTYyNjQwNjYwNn0.')]
+    #[OA\SecurityScheme(securityScheme: 'bearerAuth', type: 'http', scheme: 'bearer',)]
+    #[OA\Response(response: '201', description: 'Session Updated', content: new OA\JsonContent(properties: [
+        new OA\Property(property: 'token', type: 'string', example: 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJlbWFpbCI6InVzZXJAYXBwLmNvbSIsImV4cCI6MTYyNjQwNjYwNn0.'),
+    ]))]
+    #[OA\Response(response: '401', description: 'Unauthenticated.')]
+    public function update(Request $request): Response
+    {
+        $request->session()->regenerate();
+
+        return response([
+            'token' => 'Bearer ' . $request->session()->token(),
+        ], 200);
+    }
+
+    $this->
 }
