# openapi.yaml
@@ -65,6 +65,30 @@ paths:
           description: 'Session destroyed.'
         '401':
           description: Unauthenticated.
+  /session/update:
+    patch:
+      tags:
+        - Authentication
+      summary: 'Update the current session.'
+      operationId: c6ab3fc42e9c9216625dafef546f5829
+      parameters:
+        -
+          name: Authorization
+          in: header
+          description: 'Bearer token.'
+          required: true
+          example: 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJlbWFpbCI6InVzZXJAYXBwLmNvbSIsImV4cCI6MTYyNjQwNjYwNn0.'
+      responses:
+        '201':
+          description: 'Session Updated'
+          content:
+            application/json:
+              schema:
+                properties:
+                  token: { type: string, example: 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJlbWFpbCI6InVzZXJAYXBwLmNvbSIsImV4cCI6MTYyNjQwNjYwNn0.' }
+                type: object
+        '401':
+          description: Unauthenticated.
 components:
   securitySchemes:
     bearerAuth:
